src/lexer.cpp
/* Generated by re2c 3.1 on Wed May  6 13:52:33 2026 */
#line 1 "src/lexer.re"
// src/lexer.re
#include "driver.hpp"
#include "lexer.hpp"
#include "parser.hpp"
#include <string>
#include <cstdlib>

namespace {
std::string unescape_string(const std::string& s) {
    std::string result;
    for (size_t i = 1; i + 1 < s.size(); ++i) {
        if (s[i] == '\\' && i + 1 < s.size()) {
            char c = s[++i];
            switch (c) {
                case 'n': result += '\n'; break;
                case 't': result += '\t'; break;
                case '\\': result += '\\'; break;
                case '"': result += '"'; break;
                default: result += c; break;
            }
        } else {
            result += s[i];
        }
    }
    return result;
}
}

// ТОЛЬКО РЕАЛИЗАЦИЯ МЕТОДОВ, БЕЗ ОПРЕДЕЛЕНИЯ КЛАССА!
Lexer::Lexer(Driver& driver, const std::string& input)
    : driver_(driver), buffer_(input + '\0')
{
    cursor_ = buffer_.c_str();
    marker_ = cursor_;
    limit_ = cursor_ + buffer_.size() - 1;
}

yy::Parser::symbol_type Lexer::next_token() {
    for (;;) {
        const char* anchor = cursor_;

        
#line 46 "src/lexer.cpp"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *cursor_;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ': goto yy4;
		case '!': goto yy6;
		case '"': goto yy8;
		case '%': goto yy9;
		case '&': goto yy10;
		case '(': goto yy12;
		case ')': goto yy13;
		case '*': goto yy14;
		case '+': goto yy15;
		case ',': goto yy17;
		case '-': goto yy18;
		case '/': goto yy20;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		case ':': goto yy24;
		case ';': goto yy26;
		case '<': goto yy27;
		case '=': goto yy29;
		case '>': goto yy31;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'u':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		case '[': goto yy36;
		case ']': goto yy37;
		case 'b': goto yy38;
		case 'c': goto yy39;
		case 'd': goto yy40;
		case 'e': goto yy41;
		case 'f': goto yy42;
		case 'i': goto yy43;
		case 'r': goto yy44;
		case 's': goto yy45;
		case 't': goto yy46;
		case 'v': goto yy47;
		case '{': goto yy48;
		case '|': goto yy49;
		case '}': goto yy50;
		default: goto yy2;
	}
yy1:
	++cursor_;
#line 119 "src/lexer.re"
	{ return yy::Parser::make_END(); }
#line 149 "src/lexer.cpp"
yy2:
	++cursor_;
yy3:
#line 121 "src/lexer.re"
	{
            driver_.error(std::string("unknown character: '") + *anchor + "'");
            return yy::Parser::make_INVALID();
        }
#line 158 "src/lexer.cpp"
yy4:
	yych = *++cursor_;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
#line 49 "src/lexer.re"
	{ continue; }
#line 173 "src/lexer.cpp"
yy6:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy51;
		default: goto yy7;
	}
yy7:
#line 86 "src/lexer.re"
	{ return yy::Parser::make_NOT(); }
#line 183 "src/lexer.cpp"
yy8:
	yyaccept = 0;
	yych = *(marker_ = ++cursor_);
	switch (yych) {
		case '\n': goto yy3;
		default: goto yy53;
	}
yy9:
	++cursor_;
#line 85 "src/lexer.re"
	{ return yy::Parser::make_PERCENT(); }
#line 195 "src/lexer.cpp"
yy10:
	yych = *++cursor_;
	switch (yych) {
		case '&': goto yy56;
		default: goto yy11;
	}
yy11:
#line 87 "src/lexer.re"
	{ return yy::Parser::make_AMP(); }
#line 205 "src/lexer.cpp"
yy12:
	++cursor_;
#line 91 "src/lexer.re"
	{ return yy::Parser::make_LPAREN(); }
#line 210 "src/lexer.cpp"
yy13:
	++cursor_;
#line 92 "src/lexer.re"
	{ return yy::Parser::make_RPAREN(); }
#line 215 "src/lexer.cpp"
yy14:
	++cursor_;
#line 83 "src/lexer.re"
	{ return yy::Parser::make_STAR(); }
#line 220 "src/lexer.cpp"
yy15:
	yych = *++cursor_;
	switch (yych) {
		case '+': goto yy57;
		case '=': goto yy58;
		default: goto yy16;
	}
yy16:
#line 81 "src/lexer.re"
	{ return yy::Parser::make_PLUS(); }
#line 231 "src/lexer.cpp"
yy17:
	++cursor_;
#line 97 "src/lexer.re"
	{ return yy::Parser::make_COMMA(); }
#line 236 "src/lexer.cpp"
yy18:
	yych = *++cursor_;
	switch (yych) {
		case '-': goto yy59;
		case '=': goto yy60;
		default: goto yy19;
	}
yy19:
#line 82 "src/lexer.re"
	{ return yy::Parser::make_MINUS(); }
#line 247 "src/lexer.cpp"
yy20:
	yych = *++cursor_;
	switch (yych) {
		case '/': goto yy61;
		default: goto yy21;
	}
yy21:
#line 84 "src/lexer.re"
	{ return yy::Parser::make_SLASH(); }
#line 257 "src/lexer.cpp"
yy22:
	yyaccept = 1;
	yych = *(marker_ = ++cursor_);
	switch (yych) {
		case '.': goto yy63;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		default: goto yy23;
	}
yy23:
#line 101 "src/lexer.re"
	{
            std::string value(anchor, cursor_);
            return yy::Parser::make_INT_LITERAL(std::stoll(value));
        }
#line 281 "src/lexer.cpp"
yy24:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy64;
		default: goto yy25;
	}
yy25:
#line 99 "src/lexer.re"
	{ return yy::Parser::make_COLON(); }
#line 291 "src/lexer.cpp"
yy26:
	++cursor_;
#line 98 "src/lexer.re"
	{ return yy::Parser::make_SEMICOLON(); }
#line 296 "src/lexer.cpp"
yy27:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy65;
		default: goto yy28;
	}
yy28:
#line 88 "src/lexer.re"
	{ return yy::Parser::make_LESS(); }
#line 306 "src/lexer.cpp"
yy29:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy66;
		default: goto yy30;
	}
yy30:
#line 70 "src/lexer.re"
	{ return yy::Parser::make_ASSIGN(); }
#line 316 "src/lexer.cpp"
yy31:
	yych = *++cursor_;
	switch (yych) {
		case '=': goto yy67;
		default: goto yy32;
	}
yy32:
#line 89 "src/lexer.re"
	{ return yy::Parser::make_GREATER(); }
#line 326 "src/lexer.cpp"
yy33:
	yych = *++cursor_;
yy34:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy35;
	}
yy35:
#line 114 "src/lexer.re"
	{
            std::string name(anchor, cursor_);
            return yy::Parser::make_IDENTIFIER(name);
        }
#line 402 "src/lexer.cpp"
yy36:
	++cursor_;
#line 95 "src/lexer.re"
	{ return yy::Parser::make_LBRACKET(); }
#line 407 "src/lexer.cpp"
yy37:
	++cursor_;
#line 96 "src/lexer.re"
	{ return yy::Parser::make_RBRACKET(); }
#line 412 "src/lexer.cpp"
yy38:
	yych = *++cursor_;
	switch (yych) {
		case 'o': goto yy68;
		case 'r': goto yy69;
		default: goto yy34;
	}
yy39:
	yych = *++cursor_;
	switch (yych) {
		case 'a': goto yy70;
		case 'o': goto yy71;
		default: goto yy34;
	}
yy40:
	yych = *++cursor_;
	switch (yych) {
		case 'e': goto yy72;
		default: goto yy34;
	}
yy41:
	yych = *++cursor_;
	switch (yych) {
		case 'l': goto yy73;
		default: goto yy34;
	}
yy42:
	yych = *++cursor_;
	switch (yych) {
		case 'a': goto yy74;
		case 'l': goto yy75;
		case 'o': goto yy76;
		case 'u': goto yy77;
		default: goto yy34;
	}
yy43:
	yych = *++cursor_;
	switch (yych) {
		case 'f': goto yy78;
		case 'n': goto yy80;
		default: goto yy34;
	}
yy44:
	yych = *++cursor_;
	switch (yych) {
		case 'e': goto yy81;
		default: goto yy34;
	}
yy45:
	yych = *++cursor_;
	switch (yych) {
		case 'w': goto yy82;
		default: goto yy34;
	}
yy46:
	yych = *++cursor_;
	switch (yych) {
		case 'r': goto yy83;
		default: goto yy34;
	}
yy47:
	yych = *++cursor_;
	switch (yych) {
		case 'a': goto yy84;
		default: goto yy34;
	}
yy48:
	++cursor_;
#line 93 "src/lexer.re"
	{ return yy::Parser::make_LBRACE(); }
#line 483 "src/lexer.cpp"
yy49:
	yych = *++cursor_;
	switch (yych) {
		case '|': goto yy85;
		default: goto yy3;
	}
yy50:
	++cursor_;
#line 94 "src/lexer.re"
	{ return yy::Parser::make_RBRACE(); }
#line 494 "src/lexer.cpp"
yy51:
	++cursor_;
#line 76 "src/lexer.re"
	{ return yy::Parser::make_NOT_EQUAL(); }
#line 499 "src/lexer.cpp"
yy52:
	yych = *++cursor_;
yy53:
	switch (yych) {
		case '\n': goto yy54;
		case '"': goto yy55;
		default: goto yy52;
	}
yy54:
	cursor_ = marker_;
	if (yyaccept == 0) {
		goto yy3;
	} else {
		goto yy23;
	}
yy55:
	++cursor_;
#line 109 "src/lexer.re"
	{
            std::string value(anchor, cursor_);
            return yy::Parser::make_STRING_LITERAL(unescape_string(value));
        }
#line 522 "src/lexer.cpp"
yy56:
	++cursor_;
#line 79 "src/lexer.re"
	{ return yy::Parser::make_AND(); }
#line 527 "src/lexer.cpp"
yy57:
	++cursor_;
#line 73 "src/lexer.re"
	{ return yy::Parser::make_INCREMENT(); }
#line 532 "src/lexer.cpp"
yy58:
	++cursor_;
#line 71 "src/lexer.re"
	{ return yy::Parser::make_PLUS_ASSIGN(); }
#line 537 "src/lexer.cpp"
yy59:
	++cursor_;
#line 74 "src/lexer.re"
	{ return yy::Parser::make_DECREMENT(); }
#line 542 "src/lexer.cpp"
yy60:
	++cursor_;
#line 72 "src/lexer.re"
	{ return yy::Parser::make_MINUS_ASSIGN(); }
#line 547 "src/lexer.cpp"
yy61:
	yych = *++cursor_;
	switch (yych) {
		case '\n':
		case '\r': goto yy62;
		default: goto yy61;
	}
yy62:
#line 50 "src/lexer.re"
	{ continue; }
#line 558 "src/lexer.cpp"
yy63:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy86;
		default: goto yy54;
	}
yy64:
	++cursor_;
#line 69 "src/lexer.re"
	{ return yy::Parser::make_DEFINE_ASSIGN(); }
#line 578 "src/lexer.cpp"
yy65:
	++cursor_;
#line 77 "src/lexer.re"
	{ return yy::Parser::make_LESS_EQUAL(); }
#line 583 "src/lexer.cpp"
yy66:
	++cursor_;
#line 75 "src/lexer.re"
	{ return yy::Parser::make_EQUAL(); }
#line 588 "src/lexer.cpp"
yy67:
	++cursor_;
#line 78 "src/lexer.re"
	{ return yy::Parser::make_GREATER_EQUAL(); }
#line 593 "src/lexer.cpp"
yy68:
	yych = *++cursor_;
	switch (yych) {
		case 'o': goto yy88;
		default: goto yy34;
	}
yy69:
	yych = *++cursor_;
	switch (yych) {
		case 'e': goto yy89;
		default: goto yy34;
	}
yy70:
	yych = *++cursor_;
	switch (yych) {
		case 's': goto yy90;
		default: goto yy34;
	}
yy71:
	yych = *++cursor_;
	switch (yych) {
		case 'n': goto yy91;
		default: goto yy34;
	}
yy72:
	yych = *++cursor_;
	switch (yych) {
		case 'f': goto yy92;
		default: goto yy34;
	}
yy73:
	yych = *++cursor_;
	switch (yych) {
		case 's': goto yy93;
		default: goto yy34;
	}
yy74:
	yych = *++cursor_;
	switch (yych) {
		case 'l': goto yy94;
		default: goto yy34;
	}
yy75:
	yych = *++cursor_;
	switch (yych) {
		case 'o': goto yy95;
		default: goto yy34;
	}
yy76:
	yych = *++cursor_;
	switch (yych) {
		case 'r': goto yy96;
		default: goto yy34;
	}
yy77:
	yych = *++cursor_;
	switch (yych) {
		case 'n': goto yy98;
		default: goto yy34;
	}
yy78:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy79;
	}
yy79:
#line 55 "src/lexer.re"
	{ return yy::Parser::make_IF(); }
#line 725 "src/lexer.cpp"
yy80:
	yych = *++cursor_;
	switch (yych) {
		case 't': goto yy99;
		default: goto yy34;
	}
yy81:
	yych = *++cursor_;
	switch (yych) {
		case 't': goto yy101;
		default: goto yy34;
	}
yy82:
	yych = *++cursor_;
	switch (yych) {
		case 'i': goto yy102;
		default: goto yy34;
	}
yy83:
	yych = *++cursor_;
	switch (yych) {
		case 'u': goto yy103;
		default: goto yy34;
	}
yy84:
	yych = *++cursor_;
	switch (yych) {
		case 'r': goto yy104;
		default: goto yy34;
	}
yy85:
	++cursor_;
#line 80 "src/lexer.re"
	{ return yy::Parser::make_OR(); }
#line 760 "src/lexer.cpp"
yy86:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy86;
		default: goto yy87;
	}
yy87:
#line 105 "src/lexer.re"
	{
            std::string value(anchor, cursor_);
            return yy::Parser::make_FLOAT_LITERAL(std::stod(value));
        }
#line 782 "src/lexer.cpp"
yy88:
	yych = *++cursor_;
	switch (yych) {
		case 'l': goto yy106;
		default: goto yy34;
	}
yy89:
	yych = *++cursor_;
	switch (yych) {
		case 'a': goto yy108;
		default: goto yy34;
	}
yy90:
	yych = *++cursor_;
	switch (yych) {
		case 'e': goto yy109;
		default: goto yy34;
	}
yy91:
	yych = *++cursor_;
	switch (yych) {
		case 't': goto yy111;
		default: goto yy34;
	}
yy92:
	yych = *++cursor_;
	switch (yych) {
		case 'a': goto yy112;
		default: goto yy34;
	}
yy93:
	yych = *++cursor_;
	switch (yych) {
		case 'e': goto yy113;
		default: goto yy34;
	}
yy94:
	yych = *++cursor_;
	switch (yych) {
		case 's': goto yy115;
		default: goto yy34;
	}
yy95:
	yych = *++cursor_;
	switch (yych) {
		case 'a': goto yy116;
		default: goto yy34;
	}
yy96:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy97;
	}
yy97:
#line 57 "src/lexer.re"
	{ return yy::Parser::make_FOR(); }
#line 902 "src/lexer.cpp"
yy98:
	yych = *++cursor_;
	switch (yych) {
		case 'c': goto yy117;
		default: goto yy34;
	}
yy99:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy100;
	}
yy100:
#line 63 "src/lexer.re"
	{ return yy::Parser::make_INT_TYPE(); }
#line 980 "src/lexer.cpp"
yy101:
	yych = *++cursor_;
	switch (yych) {
		case 'u': goto yy119;
		default: goto yy34;
	}
yy102:
	yych = *++cursor_;
	switch (yych) {
		case 't': goto yy120;
		default: goto yy34;
	}
yy103:
	yych = *++cursor_;
	switch (yych) {
		case 'e': goto yy121;
		default: goto yy34;
	}
yy104:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy105;
	}
yy105:
#line 54 "src/lexer.re"
	{ return yy::Parser::make_VAR(); }
#line 1070 "src/lexer.cpp"
yy106:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy107;
	}
yy107:
#line 65 "src/lexer.re"
	{ return yy::Parser::make_BOOL_TYPE(); }
#line 1142 "src/lexer.cpp"
yy108:
	yych = *++cursor_;
	switch (yych) {
		case 'k': goto yy123;
		default: goto yy34;
	}
yy109:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy110;
	}
yy110:
#line 59 "src/lexer.re"
	{ return yy::Parser::make_CASE(); }
#line 1220 "src/lexer.cpp"
yy111:
	yych = *++cursor_;
	switch (yych) {
		case 'i': goto yy125;
		default: goto yy34;
	}
yy112:
	yych = *++cursor_;
	switch (yych) {
		case 'u': goto yy126;
		default: goto yy34;
	}
yy113:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy114;
	}
yy114:
#line 56 "src/lexer.re"
	{ return yy::Parser::make_ELSE(); }
#line 1304 "src/lexer.cpp"
yy115:
	yych = *++cursor_;
	switch (yych) {
		case 'e': goto yy127;
		default: goto yy34;
	}
yy116:
	yych = *++cursor_;
	switch (yych) {
		case 't': goto yy129;
		default: goto yy34;
	}
yy117:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		default: goto yy118;
	}
yy118:
#line 52 "src/lexer.re"
	{ return yy::Parser::make_FUNC(); }
#line 1388 "src/lexer.cpp"
yy119:
	yych = *++cursor_;
	switch (yych) {
		case 'r': goto yy131;
		default: goto yy34;
	}
yy120:
	yych = *++cursor_;
	switch (yych) {
		case 'c': goto yy132;
		default: goto yy34;
	}
yy121:
	yych = *++cursor_;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
